// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionOverviewView should render with type filter controls 1`] = `
<React.Fragment>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label="Filter by type"
  >
    <EuiSelect
      compressed={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "a",
            "value": "a",
          },
          Object {
            "text": "b",
            "value": "b",
          },
        ]
      }
      value="test-type"
    />
  </EuiFormRow>
  <TransactionOverviewChartsRequest
    render={[Function]}
    urlParams={
      Object {
        "serviceName": "MyServiceName",
        "transactionType": "test-type",
      }
    }
  />
  <EuiSpacer
    size="l"
  />
  <TransactionListRequest
    render={[Function]}
    urlParams={
      Object {
        "serviceName": "MyServiceName",
        "transactionType": "test-type",
      }
    }
  />
</React.Fragment>
`;

exports[`TransactionOverviewView should render without type filter controls if there is just a single type 1`] = `
<React.Fragment>
  <TransactionOverviewChartsRequest
    render={[Function]}
    urlParams={
      Object {
        "serviceName": "MyServiceName",
        "transactionType": "test-type",
      }
    }
  />
  <EuiSpacer
    size="l"
  />
  <TransactionListRequest
    render={[Function]}
    urlParams={
      Object {
        "serviceName": "MyServiceName",
        "transactionType": "test-type",
      }
    }
  />
</React.Fragment>
`;
